# Pre_for_RSS2026

./: .gitignore  LICENSE  README.md  camerasall.txt  change2txt.py  expand_all_pairs.py  findpairs.py  findrandomall.py  fix_tf_gpu.sh  imagesall.txt  mnn_matching.py  nn_radio.py  pairs_match.py  superpoint&sift.py  test.py  test_resize.py  testmask_superpoint.py  visualize_features.py
SCORE/: .gitignore  LICENSE  README.md
SCORE/CPP/: CMakeLists.txt  README.md  reloc_one.cpp  test.cpp
SCORE/CPP/include/: RotFGO.h  SatIS.h  TransFGO.h  helper.h
SCORE/CPP/src/: RotFGO.cpp  TransFGO.cpp  helper.cpp
SCORE/csv_dataset/: README  output_csv_files.py
SCORE/csv_dataset/S1_pred/: query.txt
SCORE/csv_dataset/S2_pred/: query.txt
SCORE/csv_dataset/S3_pred/: remapping.txt
SCORE/csv_dataset/S4_pred/: query.txt
SCORE/dictionary/: README.md
SCORE/dictionary/S1/: dictionary.txt  id_remapping.txt
SCORE/dictionary/S2/: dictionary.txt  id_remapping.txt
SCORE/dictionary/S3/: dictionary.txt  id_remapping.txt
SCORE/dictionary/S4/: dictionary.txt  id_remapping.txt
SCORE/line_map_extractor/: README.md  construct_raw_line_map.py  evaluate_prediction.ipynb  helper.py  merge_prune_line_map.py  partition_ref_query.py  prepare_query_data.py  requirements.txt
SCORE/line_map_extractor/NetVLAD20/689fec23d7/: pairs-loc.txt
SCORE/line_map_extractor/NetVLAD20/69e5939669/: pairs-loc.txt
SCORE/line_map_extractor/NetVLAD20/a1d9da703c/: pairs-loc.txt
SCORE/line_map_extractor/NetVLAD20/c173f62b15/: pairs-loc.txt
SCORE/matlab/: README.md  test.m
SCORE/matlab/Experiments/: pipeline.m  rotation.m  sensitivity_plot.m
SCORE/matlab/Experiments/utils/: angular_distance.m  match_line.m  min_max_rot_error.m  min_max_trans_error.m  remap_semantic_id.m
SCORE/matlab/FGO_PnL/Rotation/: Sat_RotFGO.m  Sat_Rot_L.m  Sat_Rot_U.m  data_process.m  h1_interval_mapping.m  (+4 more)
SCORE/scannetpp/: README.md  merged_config.yaml  requirements.txt
SCORE/scannetpp/common/: render.py  scene_release.py  split_views.py
SCORE/scannetpp/iphone/: prepare_iphone_data.py
SCORE/semantic_pipeline/: README.md  generate_tag_des.py  ram_ground_sam_openset.py  sam2_gradio.py
SCORE/semantic_pipeline/data/: 689fec23d7_dictionary.json  689fec23d7_dictionary.txt  689fec23d7_dictionary_index.txt  69e593966_dictionary.json  69e593966_dictionary.txt  69e593966_dictionary_index.txt  a1d9da703c_dictionary.json  a1d9da703c_dictionary.txt  a1d9da703c_dictionary_index.txt  c173f62b15_dictionary.json  c173f62b15_dictionary.txt  c173f62b15_dictionary_index.txt
SuperGluePretrainedNetwork/: match_pairs.py
SuperGluePretrainedNetwork/models/: utils.py
SuperPoint/: demo.py  environment.yml  requirements.txt
SuperPoint/superpoint/: match_features_demo.py  match_features_demo2.py
navi/: visualization.py
(+37 files in other folders)
